# portfolio-App

./: CONTRIBUTING.md  Python.gitignore  pyproject.toml
.github/workflows/: ci.yml
portfolio.src/: main.py
scripts/: install-git-hooks.sh  validate-branch-name.sh
