[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    

]
[tool.ruff]
# Basic Ruff configuration
line-length = 100
indent-width = 4
target-version = "py310"


# Automatically fix import order, whitespace, etc.
fix = true
show-fixes = true
src = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true


mypy_path = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --color=yes --tb=short"
testpaths = [
    "tests"
]
pythonpath = [
    "src"
]